# cesnet-models

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt
cesnet_models/: _models_meta.py  constants.py  helpers.py  models.py  transforms.py
cesnet_models/architectures/: cnn_resblock.py  embedding_model_wrapper.py  multimodal_cesnet.py  multimodal_cesnet_enhanced.py
docs/: getting_started.md  index.md  installation.md  reference_models.md  reference_transforms.md
getting_started/: index.html
installation/: index.html
reference_models/: index.html
reference_transforms/: index.html
search/: search_index.json
